# template-django

./: .env.template  Dockerfile  README.md  global_config.py  manage.py  pyproject.toml  requirements.txt
hi_ecom_product_api/: asgi.py  settings.py  urls.py  wsgi.py
src/: apps.py
src/configs/logging/: decorator.py  exec.py  middleware.py  producer.py
src/configs/settings/: redis_cache.py  utils.py  utils_call.py
src/graph_client/: checkout.py  fetch_graphql_client.py  product.py
src/models/: checkout.py  product.py
src/services/: checkout.py  product.py
src/utils/: auth.py  kibana_log.py  logger.py
src/views/: checkout.py  product.py
